# OpenPipe

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .prettierignore  .tool-versions  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  run-prod.sh  sentry.server.config.ts  tsconfig.json
@types/: nextjs-routes.d.ts
client-libs/python/: .testmondata  .testmondata-shm  README.md  codegen.sh  publish.sh  pyproject.toml
client-libs/python/openpipe/: .gitattributes  __init2__.py  __init__.py  async_openai.py  async_openai_wrapper.py  client.py  langchain_llm.py  merge_openai_chunks.py  openai.py  openai_async_wrapper.py  openai_sync_wrapper.py  openai_wrapper.py  openpipe_meta.py  shared.py  test_async_client.py  test_async_reporting.py  test_async_update_logged_call_tags.py  test_client.py  test_config.py  test_sync_client.py  test_sync_reporting.py  test_sync_update_logged_call_tags.py
client-libs/python/openpipe/api_client/: __init__.py  client.py  environment.py
client-libs/python/openpipe/api_client_fern/: __init__.py  client.py
client-libs/python/openpipe/query_client/: __init__.py  client.py  test_client.py  types.py
docker-client/: .env.example  openapi-codegen.sh  openapi.json  pyproject.toml
docker-client/docker_client/: shared.py  test_client.py
docker-client/docker_client/api_client/: __init__.py
docker-client/trainer/: shared.py
inference/: .tool-versions  deploy.ts  mistral-optimized-1218_a10-lora.yaml  package.json  pyproject.toml  serve.yaml  service-prod.yaml  service-stage.yaml
inference/baseten/: .tool-versions  config.yaml  pyproject.toml
inference/baseten/model/: model.py
inference/models/: OpenPipe--mistral-ft-optimized-1227.yaml
trainer/: .env.example  .gitignore  add_dep.py  deploy-modal-apps.sh  install_deps.sh  openapi-codegen.sh  openapi.json  pyproject.toml  requirements.txt  run-modal-apps-dev.sh
trainer/inference_server/: api.py  config.py  main.py  tmp_test.py
trainer/src/: api.py  shared.py
trainer/src/api_client/models/: __init__.py  get_model_export_info_response_200.py  get_model_export_info_response_200_weights_format.py  get_training_info_response_200.py  get_training_info_response_200_base_model.py  get_training_info_response_200_training_config.py  get_training_info_response_200_training_config_adapter.py  get_training_info_response_200_training_config_datasets_item.py  get_training_info_response_200_training_config_model_config.py  get_training_info_response_200_training_config_model_type.py  get_training_info_response_200_training_config_special_tokens.py  report_model_export_complete_json_body.py  (+1 more)
trainer/src/inference_server/: api.py  lora_experiments.py  main.py  model_benchmark.py
trainer/src/lora_inference/: api.py  experiments.py  main.py
trainer/src/trainer/: base.py  export_weights.py  main.py  test_client.py  train.py  upload_to_fireworks.py  write_config.py
trainer/trainer/: deploy_baseten.py  entrypoint.py  main.py  shared.py  test_client.py  train.py  write_config.py
trainer/trainer/api_client/: __init__.py
(+1703 files in other folders)
