[tool.poetry]
name = "openpipe"
version = "4.0.4"
description = "Python client library for the OpenPipe service"
authors = ["Kyle Corbitt <kyle@openpipe.ai>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/OpenPipe/OpenPipe"
repository = "https://github.com/OpenPipe/OpenPipe"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.1"
attrs = "^23.1.0"
python-dateutil = "^2.8.2"
openai = "1.3.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
openapi-python-client = "^0.15.0"
black = "^23.7.0"
isort = "^5.12.0"
autoflake = "^2.2.0"
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
pytest-asyncio = "^0.21.1"
pytest-watch = "^4.2.0"
pytest-testmon = "^2.0.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = "focus"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
